# donald-d

./: .gitignore  LICENSE  README.md  pyproject.toml
src/donald_d/: __init__.py  cli.py  core.py  hf.py  plotting.py
tests/: test_import.py
